--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\pitomba\Utils\Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\pitomba\Kernel\TimerTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pitomba\Utils\Logger.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Utils\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Kernel\TimerTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
