Include target name in bumpversion config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,3 +20,7 @@ replace = v{new_version}
 [bumpversion:file:VERSION]
 search = {current_version}
 replace = {new_version}
+
+[bumpversion:file:pitomba/pitomba.vcxproj]
+search = <TargetName>$(ProjectName)_{current_version}
+replace = <TargetName>$(ProjectName)_{new_version}
