--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="src\pitomba\Utils\Scheduler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\iRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
