--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="src\pitomba\Kernel\RendererTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\pitomba\Renderer\SDLRenderer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\pitomba\EventManager\EventManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -92,9 +89,6 @@
     <ClInclude Include="src\pitomba\Kernel\RendererTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\pitomba\Renderer\SDLRenderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\pitomba\EventManager\EventManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -117,6 +111,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Renderer\iRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\BaseWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\MainWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\SimpleRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
