--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -152,6 +152,8 @@
     <ClCompile Include="src\pitomba\Renderer\D3DRenderer.cpp" />
     <ClCompile Include="src\pitomba\Renderer\D3DWindow.cpp" />
     <ClCompile Include="src\pitomba\Renderer\MainWindow.cpp" />
+    <ClCompile Include="src\pitomba\Renderer\Sprite\D3DSprite.cpp" />
+    <ClCompile Include="src\pitomba\Renderer\Sprite\Sprite.cpp" />
     <ClCompile Include="src\pitomba\Utils\Rng.cpp" />
     <ClCompile Include="src\pitomba\Utils\Scheduler.cpp" />
     <ClCompile Include="src\pitomba\Utils\Timer.cpp" />
@@ -177,6 +179,8 @@
     <ClInclude Include="src\pitomba\Renderer\D3DWindow.h" />
     <ClInclude Include="src\pitomba\Renderer\MainWindow.h" />
     <ClInclude Include="src\pitomba\Renderer\iRenderer.h" />
+    <ClInclude Include="src\pitomba\Renderer\Sprite\D3DSprite.h" />
+    <ClInclude Include="src\pitomba\Renderer\Sprite\Sprite.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\TextureManager.h" />
     <ClInclude Include="src\pitomba\Utils\Color.h" />
     <ClInclude Include="src\pitomba\Utils\Rng.h" />
