--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="src\pitomba\Renderer\MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\pitomba\Renderer\D3DWindow.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\pitomba\Math\Vector3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -143,9 +140,6 @@
     <ClInclude Include="src\pitomba\Renderer\D3DRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\pitomba\Renderer\D3DWindow.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\pitomba\Utils\UnorderedMapContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -180,6 +174,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Utils\iManagedTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\iWindowProvider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
