--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="src\pitomba\Renderer\Sprite\Sprite.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\TextureManager.h" />
     <ClInclude Include="src\pitomba\Utils\Color.h" />
+    <ClInclude Include="src\pitomba\Utils\iLogger.h" />
     <ClInclude Include="src\pitomba\Utils\iManagedTimer.h" />
     <ClInclude Include="src\pitomba\Utils\iRng.h" />
     <ClInclude Include="src\pitomba\Utils\iTimer.h" />
