--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -182,6 +182,8 @@
     <ClInclude Include="src\pitomba\Renderer\iRenderer.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\D3DSprite.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\Sprite.h" />
+    <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteAlign.h" />
+    <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteId.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\iTextureManager.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\TextureManager.h" />
     <ClInclude Include="src\pitomba\Utils\Color.h" />
@@ -200,6 +202,7 @@
     <ClInclude Include="src\Sample\GameApplication.h" />
     <ClInclude Include="src\pitomba\Application\Application.h" />
     <ClInclude Include="src\pitomba\Utils\Logger.h" />
+    <ClInclude Include="src\Sample\Ids\SpriteIds.h" />
     <ClInclude Include="src\Sample\Ids\TextureIds.h" />
   </ItemGroup>
   <ItemGroup>
